--- a/ldgrp.cabal
+++ b/ldgrp.cabal
@@ -7,5 +7,6 @@ executable site
   main-is:          site.hs
   build-depends:    base == 4.*
                   , hakyll == 4.13.*
+                  , filepath == 1.4.*
   ghc-options:      -threaded
   default-language: Haskell2010
