--- a/ldgrp.cabal
+++ b/ldgrp.cabal
@@ -5,8 +5,9 @@ cabal-version:      >= 1.10
 
 executable site
   main-is:          site.hs
-  build-depends:    base == 4.*
-                  , hakyll == 4.13.*
+  build-depends:    base == 4.16.*
+                  , hakyll == 4.15.*
+                  , fsnotify == 0.4.0.0
                   , filepath == 1.4.*
   ghc-options:      -threaded
   default-language: Haskell2010
