--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
-    "build:css": "tailwindcss -i css/default.css -o css/style.css"
+    "build": "tailwindcss -i css/input.css -o css/style.css",
+    "watch": "tailwindcss -i css/input.css -o css/style.css --watch"
   },
   "keywords": [],
   "author": "",
