--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,9 +24,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-haskell@v1
+    - uses: haskell/actions/setup@v2
       with: 
-        ghc-version: '9.6.1'
+        ghc-version: '9.2.7'
         cabal-version: '3.10.1.0'
     - name: Cache
       uses: actions/cache@v3
