--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,6 +4,11 @@ on:
   # Runs on pushes targeting main
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["main"]
+
+  # Run this workflow at 3am UTC
+  schedule: [{ cron: "0 15 * * *"}]
 
   # Allows you to run this workflow mannually from the Actions tab
   workflow_dispatch:
@@ -20,10 +25,28 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  build-observable:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: './posts/observable'
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+      - id: cache-data
+        uses: actions/cache@v4
+        with:
+          path: src/.observablehq/cache
+          key: data-${{ hashFiles('src/data/*') }}-${{ steps.date.outputs.date }}
+      - run: npm ci
+      - run: npm run build
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: haskell/actions/setup@v2
       with: 
         ghc-version: '9.2.7'
@@ -62,6 +85,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name == 'push'
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
