--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,13 +23,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: haskell/actions/setup@v2
+    - uses: actions/checkout@v4
+    - uses: haskell-actions/setup@v2
       with: 
-        ghc-version: '9.2.7'
-        cabal-version: '3.10.1.0'
+        ghc-version: '9.10.1'
+        cabal-version: '3.12.1.0'
     - name: Cache
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       env:
         cache-name: cache-cabal
       with:
